# TaxiRunner

./: CMakeLists.txt  README.md  SampleTiff.tif  config.xml  main.cpp  od_sample.txt
src/: CMakeLists.txt  collector.cpp  collector.hpp  convector.cpp  convector.hpp  runner.cpp  runner.hpp  utils.hpp
